# CoaSim

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README_separate  coasim-gui.spec  coasim-guile.spec  coasim_separate.py  coasim_to_dot.xsl  coasim_to_ps  make-gui-rpm.sh  make-guile-rpm.sh  make-python-src.sh  separate.py
Core/: CMakeLists.txt  Makefile.am  README  all_markers.hh  all_markers_test.cc  autogen.sh  builder.cc  builder.hh  builder_events.cc  builder_events.hh  builder_test.cc  compile_options.hh  configuration.cc  configuration.hh  configuration_test.cc  configure.in  descender.cc  descender.hh  descender_test.cc  dist_funcs.cc  dist_funcs.hh  epochs.cc  epochs.hh  interval.cc  interval.hh  interval_test.cc  marker.cc  marker.hh  micro_satellite_marker.cc  micro_satellite_marker.hh  monitor.hh  mutation_test.cc  node.cc  node.hh  node_test.cc  retired_interval.cc  retired_interval.hh  simulator.cc  simulator.hh  simulator_test.cc  (+7 more)
GUI/: BioinformaticsApS.directory  bioinformatics-aps.menu  bioinformatics.menu  coasim.desktop  coasim_gui.pro  main.cc  maindialog.ui  maindialog.ui.h  mainwindow.ui  mainwindow.ui.h  simresultsdialog.ui  simresultsdialog.ui.h  simulation_monitor.cc  simulation_monitor.hh  simulationdialog.ui  simulationdialog.ui.h  simulationparametersdialog.ui  simulationparametersdialog.ui.h
GUI/custom_widgets/: float_spin_box.cc  float_spin_box.hh  ms_table.cc  ms_table.hh  position_checker.hh  trait_or_snp_table.cc  trait_or_snp_table.hh
GUI/designer_plugins/: custom.pro  custom_widgets.cc
Guile/: ChangeLog  Makefile.am  README  arg-parameters-test.expected  arg-parameters-test.scm  arg_parameters.cc  arg_parameters.hh  arg_parameters_test.cc  arg_parameters_test.sh  coasim_guile.cc  configuration-test.scm  configure.in  epochs-test.expected  epochs-test.scm  epochs.cc  epochs.hh  epochs_test.cc  epochs_test.sh  exceptions.cc  exceptions.hh  file2string.py  intervals.cc  intervals.hh  marker-test.expected  marker-test.scm  marker.cc  marker.hh  marker_test.cc  marker_test.sh  migration-test.scm  migration_test.sh  nodes.cc  nodes.hh  options.cc  options.hh  population-structure-compilation-test.scm  population-structure-compilation-test.sh  simulate-test.expected  simulate-test.scm  simulate.cc  (+4 more)
Guile/doc/: Makefile  bindings.xml  extract_guile_comments.py  guile-bindings.css  guile-bindings.xsl  htmltags.xsl  manual-latex.xsl  manual.xsl
Guile/scheme/: batch-test.scm  markers-test.scm
Guile/scheme/coasim/: batch.scm  disease-modelling.scm  io.scm  markers.scm  rand.scm  statistics.scm  stepwise.scm
Guile/scheme/coasim/SNP/: genotypes.scm  haplotypes.scm  shared.scm
Guile/test-input/: arg-statistics.scm  fold-mean-branch-length.scm  interval-and-tree.scm  mean-branch-length.scm  mean-interval-length.scm  mean-tree-height-1.scm  mean-tree-height-2.scm  more-mean-branch-length.scm  more-sequences.scm  more-trees.scm  ms.scm  rejection-sampling.scm  scaling.scm  sequences.scm  snp-haplotype-split-2mutations.scm  snp-haplotype-split.scm  snp-haplotype.scm  tree.scm
Python/: CMakeLists.txt  MANIFEST  MANIFEST.in  arg.cc  arg.hh  callbackTest.py  customMarkerTest.py  exceptions.hh  intervals.cc  intervals.hh  intervalsTest.py  iteratorTest.py  main.cc  markers.cc  markers.hh  markersTest.py  migrationTest.py  nodes.cc  nodes.hh  nodesTest.py  randomMarkersTest.py  run-statistical-tests.sh  run-tests.sh  setup.py  setup.py.in  simulate.cc  simulate.hh  simulateTest.py  test.py  trees.cc  trees.hh  treesTest.py
Python/examples/: sequences.py  split.py  tree.py
Python/modules/CoaSim/: IO.py  __init__.py  diseaseModelling.py  popStructure.py  randomMarkers.py
Python/stat-tests/: tree-bottlenecks-tests.py  tree-growth-tests.py  tree-tests.py
doc/: getting-started-gui.tex  getting-started-guile.tex  getting-started-python.tex  getting-started.tex  guile-manual.tex  manual.cls  python-manual.tex
gui/: Makefile  add_marker_impl.cc  add_marker_impl.hh  addmarkerform.ui  baps_float_spin_box.cc  baps_float_spin_box.hh  coasim.py  coasim_gui.cc  coasim_gui.pro  coasim_gui.py  coasim_gui.ui  coasim_gui_form.ui  coasim_gui_impl.cc  coasim_gui_impl.hh  run_simulation_impl.cc  run_simulation_impl.hh  runsimulationform.ui  show_sim_results_impl.cc  show_sim_results_impl.hh  showsimresults.ui  sim_feedback_impl.cc  sim_feedback_impl.hh  simfeedbackform.ui
src/: all_markers_test.cc  builder.cc  builder.hh  builder_test.cc  coasim.cc  coasim.dtd  coasim.py  compile_options.hh  configuration.cc  configuration.hh  configuration_test.cc  descender.cc  descender.hh  descender_test.cc  dist_funcs.hh  interval.cc  interval.hh  interval_test.cc  makefile  marker.hh  micro_satellite_marker.cc  micro_satellite_marker.hh  monitor.hh  mutation_test.cc  node.cc  node.hh  node_test.cc  profiler.cc  rc-parser-test.cc  rc-parser.cc  rc-parser.hh  reporter.hh  retired_interval.cc  retired_interval.hh  sample.rc  simulator.cc  simulator.hh  simulator_test.cc  snp_marker.cc  snp_marker.hh  (+5 more)
starters/: build_markers.py  build_simulation_xml.py  exec_simulation_coasim.py  simulation_coasim.py  simulation_extraction.py
