
add_library(Core 
		   all_markers.hh
		   builder.hh builder.cc
		   builder_events.hh builder_events.cc
		   compile_options.hh
		   configuration.hh configuration.cc
		   descender.hh descender.cc
		   dist_funcs.hh dist_funcs.cc
		   interval.hh interval.cc
		   marker.hh marker.cc
		   epochs.hh epochs.cc
		   micro_satellite_marker.hh micro_satellite_marker.cc
		   monitor.hh 
		   node.hh node.cc
		   retired_interval.hh retired_interval.cc
		   simulator.hh simulator.cc
		   snp_marker.hh snp_marker.cc
		   trait_marker.hh trait_marker.cc
		   )

