

lib_LIBRARIES = libcoasim.a
noinst_PROGRAMS = 
noinst_PROGRAMS += all_markers_test
noinst_PROGRAMS += builder_test
noinst_PROGRAMS += configuration_test
noinst_PROGRAMS += descender_test
noinst_PROGRAMS += interval_test
noinst_PROGRAMS += mutation_test
noinst_PROGRAMS += node_test
noinst_PROGRAMS += simulator_test

TESTS =
TESTS += all_markers_test
TESTS += builder_test
TESTS += configuration_test
TESTS += descender_test
TESTS += interval_test
TESTS += simulator_test



libcoasim_a_SOURCES =
libcoasim_a_SOURCES += all_markers.hh
libcoasim_a_SOURCES += builder.hh builder.cc
libcoasim_a_SOURCES += compile_options.hh
libcoasim_a_SOURCES += configuration.hh configuration.cc
libcoasim_a_SOURCES += descender.hh descender.cc
libcoasim_a_SOURCES += dist_funcs.hh dist_funcs.cc
libcoasim_a_SOURCES += interval.hh interval.cc
libcoasim_a_SOURCES += marker.hh marker.cc
libcoasim_a_SOURCES += micro_satellite_marker.hh micro_satellite_marker.cc
libcoasim_a_SOURCES += monitor.hh
libcoasim_a_SOURCES += node.hh node.cc
libcoasim_a_SOURCES += retired_interval.hh retired_interval.cc
libcoasim_a_SOURCES += simulator.hh simulator.cc
libcoasim_a_SOURCES += snp_marker.hh snp_marker.cc
libcoasim_a_SOURCES += trait_marker.hh trait_marker.cc



interval_test_SOURCES =
interval_test_SOURCES += interval.hh interval.cc
interval_test_SOURCES += interval_test.cc

configuration_test_SOURCES =
configuration_test_SOURCES += interval.hh interval.cc
configuration_test_SOURCES += retired_interval.hh retired_interval.cc
configuration_test_SOURCES += node.hh node.cc
configuration_test_SOURCES += marker.hh marker.cc
configuration_test_SOURCES += dist_funcs.hh dist_funcs.cc
configuration_test_SOURCES += snp_marker.hh snp_marker.cc
configuration_test_SOURCES += configuration.hh configuration.cc
configuration_test_SOURCES += configuration_test.cc

node_test_SOURCES = 
node_test_SOURCES += node.hh node.cc
node_test_SOURCES += interval.hh interval.cc
node_test_SOURCES += retired_interval.hh retired_interval.cc
node_test_SOURCES += configuration.hh configuration.cc
node_test_SOURCES += marker.hh marker.cc
node_test_SOURCES += snp_marker.hh snp_marker.cc
node_test_SOURCES += dist_funcs.hh dist_funcs.cc
node_test_SOURCES += node_test.cc

all_markers_test_SOURCES =
all_markers_test_SOURCES += testing.hh
all_markers_test_SOURCES += interval.hh interval.cc
all_markers_test_SOURCES += node.hh node.cc
all_markers_test_SOURCES += retired_interval.hh retired_interval.cc
all_markers_test_SOURCES += marker.hh marker.cc
all_markers_test_SOURCES += all_markers.hh 
all_markers_test_SOURCES += snp_marker.hh snp_marker.cc
all_markers_test_SOURCES += micro_satellite_marker.hh micro_satellite_marker.cc
all_markers_test_SOURCES += trait_marker.hh trait_marker.cc
all_markers_test_SOURCES += dist_funcs.hh dist_funcs.cc
all_markers_test_SOURCES += all_markers_test.cc

mutation_test_SOURCES =
mutation_test_SOURCES += interval.hh interval.cc
mutation_test_SOURCES += node.hh node.cc
mutation_test_SOURCES += retired_interval.hh retired_interval.cc
mutation_test_SOURCES += configuration.hh configuration.cc
mutation_test_SOURCES += marker.hh marker.cc
mutation_test_SOURCES += all_markers.hh
mutation_test_SOURCES += snp_marker.hh snp_marker.cc
mutation_test_SOURCES += micro_satellite_marker.hh micro_satellite_marker.cc
mutation_test_SOURCES += trait_marker.hh trait_marker.cc
mutation_test_SOURCES += dist_funcs.hh test_dist_funcs.hh test_dist_funcs.cc
mutation_test_SOURCES += mutation_test.cc

builder_test_SOURCES =
builder_test_SOURCES += interval.hh interval.cc
builder_test_SOURCES += retired_interval.hh retired_interval.cc
builder_test_SOURCES += node.hh node.cc
builder_test_SOURCES += configuration.hh configuration.cc
builder_test_SOURCES += dist_funcs.hh dist_funcs.cc
builder_test_SOURCES += marker.hh marker.cc
builder_test_SOURCES += snp_marker.hh snp_marker.cc
builder_test_SOURCES += builder.hh builder.cc
builder_test_SOURCES += builder_test.cc

descender_test_SOURCES =
descender_test_SOURCES += interval.hh interval.cc
descender_test_SOURCES += retired_interval.hh retired_interval.cc
descender_test_SOURCES += node.hh node.cc
descender_test_SOURCES += configuration.hh configuration.cc
descender_test_SOURCES += marker.hh marker.cc
descender_test_SOURCES += snp_marker.hh snp_marker.cc
descender_test_SOURCES += trait_marker.hh trait_marker.cc
descender_test_SOURCES += micro_satellite_marker.hh micro_satellite_marker.cc
descender_test_SOURCES += dist_funcs.hh dist_funcs.cc
descender_test_SOURCES += descender.cc
descender_test_SOURCES += descender_test.cc

simulator_test_SOURCES =
simulator_test_SOURCES += interval.hh interval.cc
simulator_test_SOURCES += retired_interval.hh retired_interval.cc
simulator_test_SOURCES += node.hh node.cc
simulator_test_SOURCES += configuration.hh configuration.cc
simulator_test_SOURCES += builder.hh builder.cc
simulator_test_SOURCES += descender.hh descender.cc
simulator_test_SOURCES += marker.hh marker.cc
simulator_test_SOURCES += snp_marker.hh snp_marker.cc
simulator_test_SOURCES += trait_marker.hh trait_marker.cc
simulator_test_SOURCES += micro_satellite_marker.hh micro_satellite_marker.cc
simulator_test_SOURCES += dist_funcs.hh dist_funcs.cc
simulator_test_SOURCES += simulator.hh simulator.cc
simulator_test_SOURCES += simulator_test.cc










